--- a/index.html
+++ b/index.html
@@ -1,12 +1,56 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Universo da FisMed</title>
+<style>
+body {
+font-family: Times New Roman, sans-serif;
+background-color: #f4f4f4;
+color: #333;
+margin: 0;
+padding: 0;
+}
+header {
+background-color: #11AAE1;
+color: white;
+padding: 10px 0;
+text-align: center;
+} 
+main {
+padding: 20px
+}
+footer {
+background-color: #333;
+color: white;
+text-align: center;
+position: fixed;
+padding: 5px 0;
+bottom: 0;
+width: 100%;
+}
+h1 {
+font-size: 2em;
+}
+p {
+font-size: 1.2em;
+}
+</style>
 </head>
 <body>
 
-<h1>My First Heading</h1>
-<p>My first paragraph.</p>
+<header>
+<h1>Bem-vindo ao Universo da FisMed!</h1>
+</header>
+
+<main>
+<h2>Explorando o Conhecimento</h2>
+<p>O Universo da FisMed é um lugar onde a física e a medicina se encontram para proporcionar novas descobertas e inovações.</p>
+<p>Aqui, você vai encontrar recursos, artigos e muito mais sobre como essas duas áreas se conectam e ajudam no avanço da ciência e da saúde.</p>
+</main>
+
+<footer>
+<p>&copy; 2025 Universo da FisMed - Todos os direitos reservados.</p>
+</footer>
 
 </body>
-</html>
+</html> 
